Bug 610951 - Avoid c++0x compilers to fail on narrowing conversions inside {} in PluginInstanceChild.cpp. r=jst,a=jst